# EasyKeyDB

./: .gitignore  CMakeLists.txt  Dockerfile  KnowNothing.md  Readme.md  main.cpp
.github/workflows/: pull-request.yml
clients/: EasyKeyV1Client-Cli-Read.c  EasyKeyV1Client-Cli-Write.c  EasyKeyV1Client-Interactive.c  Makefile  easykeyv1-clients.c  easykeyv1-clients.h
include/: byte_buffer.hpp  database.hpp  easykey.hpp  io_notifier.hpp  know_nothing.hpp  server.hpp  socket.hpp
source/: byte_buffer.cpp  database.cpp  easykey.cpp  io_notifier.cpp  know_nothing.cpp  server.cpp  socket.cpp
tests/: Client-Server.c  EasyKeyV1Client-Cli-Read.c  EasyKeyV1Client-Cli-Write.c  EasyKeyV1ClientDemo.c  SendMessageClient.c  easykeyv1-clients.c  easykeyv1-clients.h  import-files.py
